...
    "tab.ask": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Ask"
          }
        },
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "问熊猫"
...
    "tab.profile": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Profile"
          }
        },
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "我的"
...
    },
    "tab.library": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Library"
          }
        },
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "资源库"
...
